--- a/css/style.scss
+++ b/css/style.scss
@@ -5,51 +5,79 @@
 }
 
 header{
+    .header-container{
+        width: fit-content;
+        //border: 1px solid #000000;
+        position: relative;
+        margin: 0 auto;
+    }
+    position: relative;
     width: 100%;
     text-align: center;
     padding: 15px 0;
     height: 10vh;
-    display: flex;
+    //display: flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
+    p{  position: absolute;
+        right: -15px;
+        top: -5px;
+        //transform: rotatez(10deg);
+        
+    }   
     h1{
         margin:0;
         font-size: 40px;
-        color: #cdf564;
+        color: #000000;
         font-weight: 700;
     }
 }
 body{
     font-family: 'Ubuntu Condensed', sans-serif;
-    background: #000000;  
+    background: #ffffff;  
     max-height: 100vh;
     overflow: hidden;
     padding: 0 15px;
 }
-
+input{
+    cursor: pointer;
+}
 //----------------------------------------main
 main{
     height: 90vh;
+    .completed{
+        .task{
+            p{
+    
+                text-decoration: line-through #fff;
+            }
+
+        }
+    }
     .card{
+    position: relative;
     color: #ffffff;
+    //background: #000000;
     margin: 2vh auto;
     height: 7vh;
     transition: all 0.45s ease;
-    border: 2px solid #4b917d;
+    //border: 2px solid #000000;
     overflow: hidden;
     max-width: 750px;
     .task{
+        color: #000000;
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 10px 15px;
         margin: 10px 10px;
-        border: 2px solid #ffffff;
+        
         border-radius: 14px;
-        background: #6161618e;
+        background: #cacaca;
         p{
             width: 90%;
         }
+
     }
       }
     .title-card{
@@ -74,5 +102,35 @@ main{
             transform: rotate(0deg);
             }
         
+    }
+    .add{
+
+        textarea{
+            display: block;
+            width: 90%;
+            resize: none;
+            margin: 15px auto;
+            padding: 5px 15px;
+        }
+        button{
+            border: none;
+            padding: 15px;
+            bottom: 15px;
+            background: #000000;
+            display: block;
+            margin: 0 auto;
+            margin-top: 50px;
+            font-size: 20px;
+            transition: all 0.35s ease;
+            color: #ffffff;
+            border: 2px solid #000000;
+            cursor: pointer;
+
+        }
+        button:hover{
+            background: #ffffff;
+            color: #000000;
+            
+        }
     }
 }
