--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   width: 100%;
   text-align: center;
   padding: 15px 0;
-  height: 10vh;
+  margin-top: 15px;
+  height: 5vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -119,13 +123,17 @@ main .title-card img {
 }
 
 main .card-opened {
-  height: 68vh;
+  height: 70vh;
   overflow-y: scroll;
 }
 
 main .card-opened img {
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
+}
+
+main .add {
+  overflow: hidden;
 }
 
 main .add textarea {
@@ -155,5 +163,28 @@ main .add button {
 main .add button:hover {
   background: #ffffff;
   color: #000000;
+}
+
+@media (min-width: 700px) {
+  ::-webkit-scrollbar {
+    width: 5px;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 5px grey;
+            box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #000000;
+    border-radius: 10px;
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #8f8f8f;
+  }
 }
 /*# sourceMappingURL=style.css.map */
