--- a/css/style.scss
+++ b/css/style.scss
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+ 
+  
 
 header{
+    display: flex;
     .header-container{
         width: fit-content;
         //border: 1px solid #000000;
@@ -15,7 +18,8 @@ header{
     width: 100%;
     text-align: center;
     padding: 15px 0;
-    height: 10vh;
+    margin-top: 15px;
+    height: 5vh;
     //display: flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +48,7 @@ input{
 }
 //----------------------------------------main
 main{
+    
     height: 90vh;
     .completed{
         .task{
@@ -96,7 +101,7 @@ main{
         }
     }
     .card-opened{
-        height: 68vh;
+        height: 70vh;
         overflow-y: scroll;       
         img{
             transform: rotate(0deg);
@@ -104,7 +109,7 @@ main{
         
     }
     .add{
-
+        overflow: hidden;
         textarea{
             display: block;
             width: 90%;
@@ -133,4 +138,31 @@ main{
             
         }
     }
+}
+//-----------------------------------------------form
+
+@media (min-width:700px){
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        transition: all 0.35s ease;
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey; 
+        border-radius: 10px;
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #000000; 
+        border-radius: 10px;
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #8f8f8f;
+}
+
 }
