--- a/css/style.scss
+++ b/css/style.scss
@@ -48,10 +48,14 @@ input{
 }
 //----------------------------------------main
 main{
-    
+    display: flex;
+    flex-direction: column;
     height: 90vh;
-    .completed{
+    max-width: 750px;
+    margin: 0 auto;
+    .card.completed{
         .task{
+            background: #ff4036bc;
             p{
     
                 text-decoration: line-through #fff;
@@ -63,12 +67,13 @@ main{
     position: relative;
     color: #ffffff;
     //background: #000000;
-    margin: 2vh auto;
+    margin: 1vh auto;
     height: 7vh;
     transition: all 0.45s ease;
     //border: 2px solid #000000;
     overflow: hidden;
-    max-width: 750px;
+    width: 100%;
+    
     .task{
         color: #000000;
         display: flex;
@@ -78,7 +83,7 @@ main{
         margin: 10px 10px;
         
         border-radius: 14px;
-        background: #cacaca;
+        background: #0074d983;
         p{
             width: 90%;
         }
@@ -138,6 +143,19 @@ main{
             
         }
     }
+}
+/* .wrapper{
+   position: relativ
+} */
+.card-nav{
+position: sticky;
+top: 6.90vh;
+//border: 1px solid red;
+text-align: end;
+padding: 3px 15px;
+color: #000000;
+background: #ddddddce;
+
 }
 //-----------------------------------------------form
 
