--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,7 @@ main{
     }
       }
     .title-card{
+        cursor:pointer;
         position: sticky;
         background: #000;
         top: 0;
