--- a/css/style.scss
+++ b/css/style.scss
@@ -55,9 +55,10 @@ main{
     margin: 0 auto;
     .card.completed{
         .task{
-            background: #ff4036bc;
+            background: linear-gradient(to right, #0074d983 50%, #ff4036bc 50%);
+            background-size: 210% 100%;
+            background-position: top right;
             p{
-    
                 text-decoration: line-through #fff;
             }
 
@@ -81,9 +82,11 @@ main{
         justify-content: space-between;
         padding: 10px 15px;
         margin: 10px 10px;
-        
+        transition: all 1s ease-in-out;
         border-radius: 14px;
-        background: #0074d983;
+        background: linear-gradient(to right, #ff4036bc 50%, #0074d983 50%);
+        background-size: 210% 100%;
+        background-position: top right;
         p{
             width: 90%;
         }
@@ -91,7 +94,7 @@ main{
     }
       }
     .title-card{
-        cursor:pointer;
+        cursor: pointer;
         position: sticky;
         background: #000;
         top: 0;
