--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
           box-sizing: border-box;
 }
 
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000000;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,8 +114,10 @@ main .card .task {
           justify-content: space-between;
   padding: 10px 15px;
   margin: 10px 10px;
-  -webkit-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
+  -webkit-transition: background-position 1s ease-in-out, -webkit-transform 0.2s ease-in-out;
+  transition: background-position 1s ease-in-out, -webkit-transform 0.2s ease-in-out;
+  transition: background-position 1s ease-in-out, transform 0.2s ease-in-out;
+  transition: background-position 1s ease-in-out, transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
   border-radius: 14px;
   background: -webkit-gradient(linear, left top, right top, color-stop(50%, #ff4036bc), color-stop(50%, #0074d983));
   background: linear-gradient(to right, #ff4036bc 50%, #0074d983 50%);
@@ -200,6 +211,24 @@ main .add button:hover {
   background: #ddddddce;
 }
 
+@-webkit-keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @media (min-width: 700px) {
   ::-webkit-scrollbar {
     width: 5px;
@@ -220,6 +249,10 @@ main .add button:hover {
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #8f8f8f;
+  }
+  .task:hover {
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
   }
 }
 /*# sourceMappingURL=style.css.map */
