--- a/css/style.scss
+++ b/css/style.scss
@@ -1,26 +1,29 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
- 
-a{
+
+a {
     color: #000000;
     text-decoration: none;
-}  
-a:visited{
+}
+
+a:visited {
     color: #000000;
 }
 
 
-header{
+header {
     display: flex;
-    .header-container{
+
+    .header-container {
         width: fit-content;
         //border: 1px solid #000000;
         position: relative;
         margin: 0 auto;
     }
+
     position: relative;
     width: 100%;
     text-align: center;
@@ -30,79 +33,93 @@ header{
     //display: flex;
     justify-content: center;
     align-items: center;
-    p{  position: absolute;
+
+    p {
+        position: absolute;
         right: -15px;
         top: -5px;
         //transform: rotatez(10deg);
-        
-    }   
-    h1{
-        margin:0;
+
+    }
+
+    h1 {
+        margin: 0;
         font-size: 40px;
         color: #000000;
         font-weight: 700;
     }
 }
-body{
+
+body {
     font-family: 'Ubuntu Condensed', sans-serif;
-    background: #ffffff;  
+    background: #ffffff;
     max-height: 100vh;
     overflow: hidden;
     padding: 0 15px;
 }
-input{
-    cursor: pointer;
-}
+
+
+
+
 //----------------------------------------main
-main{
+main {
     display: flex;
     flex-direction: column;
     height: 90vh;
     max-width: 750px;
     margin: 0 auto;
-    .card.completed{
-        .task{
+
+    .card.completed {
+        .task {
             background: linear-gradient(to right, #0074d983 50%, #ff4036bc 50%);
             background-size: 210% 100%;
             background-position: top right;
-            p{
+
+            p {
                 text-decoration: line-through #fff;
             }
 
         }
     }
-    .card{
-    position: relative;
-    color: #ffffff;
-    //background: #000000;
-    margin: 1vh auto;
-    height: 7vh;
-    transition: all 0.45s ease;
-    //border: 2px solid #000000;
-    overflow: hidden;
-    width: 100%;
-    
-    .task{
-        color: #000000;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px 15px;
-        margin: 10px 10px;
-        //cursor: pointer;
-        transition:  background-position 1s ease-in-out, transform 0.2s ease-in-out;;
-        border-radius: 14px;
-        background: linear-gradient(to right, #ff4036bc 50%, #0074d983 50%);
-        background-size: 210% 100%;
-        background-position: top right;
-        p{
-            width: 90%;
+
+    .card {
+        position: relative;
+        color: #ffffff;
+        //background: #000000;
+        margin: 1vh auto;
+        height: 7vh;
+        transition: all 0.45s ease;
+        //border: 2px solid #000000;
+        overflow: hidden;
+        width: 100%;
+
+        .task {
+            color: #000000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 15px;
+            margin: 10px 10px;
+            //cursor: pointer;
+            transition: background-position 1s ease-in-out, transform 0.2s ease-in-out;
+            ;
+            border-radius: 14px;
+            background: linear-gradient(to right, #ff4036bc 50%, #0074d983 50%);
+            background-size: 210% 100%;
+            background-position: top right;
+
+            p {
+                width: 90%;
+            }
+            input{
+                cursor: pointer;
+            }
+
         }
-        
+
     }
 
-      }
-    .title-card{
+    .title-card {
         cursor: pointer;
         position: sticky;
         background: #000;
@@ -113,29 +130,35 @@ main{
         align-items: center;
         font-size: 25px;
         padding: 10px 15px;
-        img{
+
+        img {
             transform: rotate(180deg);
             z-index: -1;
         }
     }
-    .card-opened{
+
+    .card-opened {
         height: 70vh;
-        overflow-y: scroll;       
-        img{
+        overflow-y: scroll;
+
+        img {
             transform: rotate(0deg);
-            }
-        
+        }
+
     }
-    .add{
+
+    .add {
         overflow: hidden;
-        textarea{
+
+        textarea {
             display: block;
             width: 90%;
             resize: none;
             margin: 15px auto;
             padding: 5px 15px;
         }
-        button{
+
+        button {
             border: none;
             padding: 15px;
             bottom: 15px;
@@ -150,63 +173,62 @@ main{
             cursor: pointer;
 
         }
-        button:hover{
+
+        button:hover {
             background: #ffffff;
             color: #000000;
-            
+
         }
     }
 }
+
 /* .wrapper{
    position: relativ
 } */
-.card-nav{
-position: sticky;
-top: 6.90vh;
-//border: 1px solid red;
-text-align: end;
-padding: 3px 15px;
-color: #000000;
-background: #ddddddce;
+.card-nav {
+    position: sticky;
+    top: 6.90vh;
+    //border: 1px solid red;
+    text-align: end;
+    padding: 3px 15px;
+    color: #000000;
+    background: #ddddddce;
 
 }
-@keyframes disappear{
-    0%{
+
+@keyframes disappear {
+    0% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         opacity: 0;
     }
 }
+
 //-----------------------------------------------form
 
-@media (min-width:700px){
+@media (min-width:700px) {
 
     ::-webkit-scrollbar {
         width: 5px;
         transition: all 0.35s ease;
-      }
-      
-      /* Track */
-      ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px grey; 
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
         border-radius: 10px;
-      }
-       
-      /* Handle */
-      ::-webkit-scrollbar-thumb {
-        background: #000000; 
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #000000;
         border-radius: 10px;
-      }
-      
-      /* Handle on hover */
-      ::-webkit-scrollbar-thumb:hover {
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
         background: #8f8f8f;
-}
-.task:hover{
-    transform: scale(1.02);
-
-    
- }
-
+    }
 }
