--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ a:visited {
   color: #000000;
 }
 
+select {
+  border-radius: 14px;
+  text-align: center;
+  padding: 1px;
+  cursor: pointer;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -130,6 +137,10 @@ main .card .task input {
 }
 
 main .title-card {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   cursor: pointer;
   position: -webkit-sticky;
   position: sticky;
